fix menu issue with white space nowrap

--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -70,10 +70,11 @@
       .menu-sidebar {
         width: 70px;
         word-spacing: 10px;
-      //  border: 3px solid $primary-colour;
+        border: 3px solid $primary-colour;
         display: flex;
         align-items: center;
         padding: 30px 0;
+        white-space: nowrap;
         @media screen and (max-width: 1000px) {
           width: 50px;
         }
@@ -94,7 +95,7 @@
         top: 150px;
         // bottom: 500px;
       }
-     border: 3px solid $primary-colour;
+    // border: 3px solid $primary-colour;
     }
 
     .right {
@@ -106,7 +107,7 @@
         position: sticky;
         top: 150px;
       }
-      border: 3px solid $primary-colour;
+    //  border: 3px solid $primary-colour;
 
     }
     .main-menu {
